# Jaman

./: .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  FILES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECENT_CHANGES.md  SECURITY.md  install.ps1  install.sh  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
src/: config.rs  detector.rs  downloader.rs  lib.rs  main.rs  path_manager.rs
src/commands/: activate.rs  clean.rs  doctor.rs  install.rs  list.rs  mod.rs  scan.rs
tests/: config_tests.rs  detector_tests.rs  downloader_tests.rs  path_manager_tests.rs
