[package]
name = "jaman"
version = "0.1.0"
edition = "2021"
authors = ["Jaman Contributors"]
description = "A powerful Java version manager for managing multiple JDK installations"
license = "MIT"

[lib]
name = "jaman"
path = "src/lib.rs"

[[bin]]
name = "jaman"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
bytes = "1.5"
tempfile = "3.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
